<resources>

    <string name="app_name">Mosdan</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_progress_scanner">ProgressScanner</string>
    <string name="tvwalltext1">電視牆</string>
    <string name="tvwalltext2">情境</string>
    <string name="save_tv_wall">另存電視牆情境</string>
    <string name="applySituation">套用電視牆情境</string>
    <string name="setSituation">情境設定</string>

    <string-array name="situation">
        <item>G1</item>
        <item>G2</item>
        <item>G3</item>
    </string-array>
    <string-array name="one">
        <item>1</item>
    </string-array>
    <string-array name="two">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="four">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="mosdantitle">牟士登國際股份有限公司</string>
    <string name="pass">傳送端</string>
    <string name="situationset">情境設定</string>
    <string name="receive">接收端</string>
    <string name="groupcontrol">群組控制</string>
    <string name="groupsing">電視牆情境</string>
    <string name="setting">開始設定您的顯示情境</string>
    <string name="play">群組廣播</string>
    <string name="custom">對一群機器廣播一個畫面</string>
    <string name="tryit">試看看</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="more">More</string>

    <string-array name="Tx_mode">
        <item>Graphic</item>
        <item>Video</item>
    </string-array>
    <string-array name="ATI_mode">
        <item>OFF</item>
        <item>Type 1</item>
        <item>Type 2</item>
    </string-array>

    <string name="generalconsmall">設定簡單的傳送端與接收端連線</string>
    <string name="generalconbig">一般連線</string>
    <string name="none">無</string>
    <string name="select_first">請選擇</string>
    <string name="rx_or_group">接收端</string>
    <string name="chose">選擇已儲存的電視牆情境</string>

</resources>